force-app/main/default/objects/WhatsApp_Media__c/WhatsApp_Media__c.object-meta.xml
<CustomObject>
    <label>WhatsApp Media</label>
    <nameField>
        <displayFormat>MEDIA-{00000}</displayFormat>
        <label>Media Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WhatsApp Media</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>