force-app/main/default/objects/WhatsApp_Media__c/fields/ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentId__c</fullName>
    <description>Salesforce ContentDocument ID for file rendering</description>
    <label>ContentDocumentId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>