force-app/main/default/objects/WhatsApp_Media__c/fields/ContentVersion_ID__c.field-meta.xml
<CustomField>
    <fullName>ContentVersion_ID__c</fullName>
    <description>Salesforce ContentVersion ID where media is stored</description>
    <label>ContentVersion ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>