force-app/main/default/objects/WhatsApp_Media__c/fields/Download_Status__c.field-meta.xml
<CustomField>
    <fullName>Download_Status__c</fullName>
    <description>Status of media download from WhatsApp</description>
    <label>Download Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Downloading</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>