force-app/main/default/objects/WhatsApp_Media__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <description>Original filename from WhatsApp</description>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>