force-app/main/default/objects/WhatsApp_Media__c/fields/Is_Voice_Note__c.field-meta.xml
<CustomField>
    <fullName>Is_Voice_Note__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this audio is a WhatsApp voice note</description>
    <label>Is Voice Note</label>
    <type>Checkbox</type>
</CustomField>