force-app/main/default/objects/WhatsApp_Media__c/fields/Media_ID__c.field-meta.xml
<CustomField>
    <fullName>Media_ID__c</fullName>
    <description>WhatsApp Media ID</description>
    <externalId>true</externalId>
    <label>Media ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>