force-app/main/default/objects/WhatsApp_Media__c/fields/Media_URL__c.field-meta.xml
<CustomField>
    <fullName>Media_URL__c</fullName>
    <description>Temporary WhatsApp media download URL</description>
    <label>Media URL</label>
    <type>Url</type>
</CustomField>