force-app/main/default/objects/WhatsApp_Media__c/fields/Media_URL_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Media_URL_Expiry__c</fullName>
    <description>When the temporary media URL expires</description>
    <label>Media URL Expiry</label>
    <type>DateTime</type>
</CustomField>