force-app/main/default/objects/WhatsApp_Media__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Related WhatsApp Message</description>
    <label>Message</label>
    <referenceTo>WhatsApp_Message__c</referenceTo>
    <relationshipLabel>Media Files</relationshipLabel>
    <relationshipName>WhatsApp_Media</relationshipName>
    <type>MasterDetail</type>
</CustomField>