force-app/main/default/objects/WhatsApp_Media__c/fields/MIME_Type__c.field-meta.xml
<CustomField>
    <fullName>MIME_Type__c</fullName>
    <description>MIME type of the media file</description>
    <label>MIME Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>