force-app/main/default/objects/WhatsApp_Media__c/fields/SHA256_Hash__c.field-meta.xml
<CustomField>
    <fullName>SHA256_Hash__c</fullName>
    <description>SHA256 hash of media file from WhatsApp</description>
    <label>SHA256 Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>