force-app/main/default/objects/WhatsApp_Media__c/listViews/All_Media.listView-meta.xml
<ListView>
    <fullName>All_Media</fullName>
    <columns>NAME</columns>
    <columns>Media_Type__c</columns>
    <columns>File_Name__c</columns>
    <columns>Download_Status__c</columns>
    <columns>MIME_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Media</label>
</ListView>