force-app/main/default/objects/WhatsApp_Media__c/listViews/Audio_Media.listView-meta.xml
<ListView>
    <fullName>Audio_Media</fullName>
    <columns>NAME</columns>
    <columns>Media_Type__c</columns>
    <columns>File_Name__c</columns>
    <columns>Download_Status__c</columns>
    <columns>ContentVersion_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Media_Type__c</field>
        <operation>equals</operation>
        <value>Audio</value>
    </filters>
    <label>Audio Media</label>
</ListView>