force-app/main/default/objects/WhatsApp_Media__c/listViews/Failed_Downloads.listView-meta.xml
<ListView>
    <fullName>Failed_Downloads</fullName>
    <columns>NAME</columns>
    <columns>Media_Type__c</columns>
    <columns>File_Name__c</columns>
    <columns>Download_Status__c</columns>
    <columns>Media_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Download_Status__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </filters>
    <label>Failed Downloads</label>
</ListView>